Implemented heuristic detection of corrupted PDF after Ghostcript processing the encryption (Gonzalo)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@552 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -164,6 +164,7 @@ ndo
 
 X.XX - YYYY/MM/DD
 - Added support for Adobe Illustrator (AI) file types (maadjordan).
+- Implemented heuristic detection of corrupted PDF after Ghostcript processing the encryption (Gonzalo).
 - Updated jpegoptim to 1.4.4 (custom built).
 - Updated ImageMagick 7.0.2.9 with HDRI support.
 
