--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -167,6 +167,7 @@ X.XX - YYYY/MM/DD
 - Implemented heuristic detection of corrupted PDF after Ghostcript processing the encryption (Gonzalo).
 - Updated jpegoptim to 1.4.4 (custom built).
 - Updated ImageMagick 7.0.2.9 with HDRI support.
+- Some minor optimizations and code cleanup.
 
 
 9.00 - 2016/08/15
