--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -158,7 +158,7 @@ ndo
 - pngrewrite 1.4.0 - http://entropymine.com/jason/pngrewrite
 - pngwolf-zopli 1.1.0 - https://github.com/jibsen/pngwolf-zopfli
 - rehuff - http://wiki.xiph.org/Rehuff
-- Tidy 5.1.14 - http://tidy.sourceforge.net
+- Tidy 5.1.0 - http://tidy.sourceforge.net
 - TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
 - UPX 3.91 - http://upx.sourceforge.net
 - ZLib 1.2.8 - http://www.zlib.net
@@ -174,6 +174,7 @@ X.XX - YYYY/MM/DD
 - Implemented heuristic detection of corrupted PDF after Ghostcript processing the encryption (Gonzalo).
 - Proper wording wording for "Mb." is "MiB". Thanks to Armin Mueller for the patch (Armin Mueller).
 - Made statistics use B, KiB, MiB o GiB automatically (Armin Mueller).
+- Uptaded Tidy to 5.2.0 (TPS).
 - Updated pngwolg-zopfil x64 to 1.1.0-1-g59510c1, because previous 64 bit version sometimes crashes on Windows 10 -Thanks Joergen Ibse- (alex123, bob joseph).
 - Removed Embarcadero's Luna, Metropolis and Windows 10 themes because they have issues with Windows 10 Anniversary and later.
 - Updated jpegoptim to 1.4.4 (custom built).
