--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -152,7 +152,7 @@ ndo
 - Ghostscript 9.21 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.5.4 - http://www.imagemagick.org
+- ImageMagick 7.0.5.5 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -185,6 +185,7 @@ ndo
 
 X.XX - YYYY
 - Fixed some help typos (Joel Rangelle).
+- Updated ImageMagick 7.0.5.5 with HDRI support.
 - Updated pingo to 0.79s.
 
 
