--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -182,6 +182,7 @@ X.XX - YYYY
 - Updated ImageWorsener to 1.3.1.
 - Updated ImageMagick 7.0.5.5 with HDRI support.
 - Updated pingo to 0.80b.
+- Some minor optimizations and code cleanup.
 
 
 9.80 - 2017/04/15
