--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -176,8 +176,8 @@ ndo
 
 
 X.XX - YYYY
-- Added ffmpeg to the video toolchain.
-- New extensions supported in the video toolchain: .mpg .mpeg .flv .wmv .wma .rv .ra .rm .rmvb .ram .smil
+- Added ffmpeg to the video toolchain (mp4, mkv, ogv).
+- New extensions supported in the video toolchain: .mpg .mpeg .flv .wmv .wma .rv .ra .rm .rmvb .ram .smil, qt, mov, 3gg, 3g2).
 - Fixed some help typos (Joel Rangelle).
 - Updated ImageWorsener to 1.3.1.
 - Updated ImageMagick 7.0.5.5 with HDRI support.
